<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MA_RPC_ERROR" Id="{cf049785-7033-42c1-a7b2-d1114aafe96d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MA_RPC_ERROR :
(
	OK						:=  0,
	NOT_OP					:= -1,			
	NOT_NOTOP_READY	    	:= -2,			
	NOT_NOTOP_NOTREADY		:= -3,			
	LOCAL					:= -4,			
	SW_LIMIT_LOWER			:= -5,			
	SW_LIMIT_UPPER			:= -6,			
	INIT_WHILE_MOVING		:= -7,
	VEL_ZERO				:= -8,			
	VEL_NEG					:= -9,			
	VEL_MAX					:= -10,
	NOT_TRACKING            := -11,

	UNSAFE					:= -12	// EICSSW-1923			
		
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>