<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_MA_STATE" Id="{c3317339-97a5-4fa8-8569-fa8c28bc7b2e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE E_MA_STATE :
(
	NONE	:= 0,
	NOTOP,
	OP
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>