<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_DROT_MODE" Id="{f28b18b2-e67b-4f00-82c9-9210fd17f917}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_DROT_MODE :
(
	ENG		:= 0,
	STAT	:= 1,
	SKY		:= 2,
	ELEV	:= 3,
	USER	:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>