<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_DROT_STAT" Id="{8e2ba0a5-7ca8-4dcb-9e4c-33765ff99a3b}">
    <Declaration><![CDATA[TYPE T_DROT_STAT EXTENDS T_MA_STAT :
STRUCT
	lrRotation:         LREAL   := 0;
	lrPupil:            LREAL   := 0;
	lrAngleOnSky:       LREAL   := 0;
	lrModeAngle:        LREAL   := 0;
	lrActualVel:        LREAL;
	lrPosAng:           LREAL   := 0.0;
	lrPos:			 	LREAL   := 0.0;
	lrTotalOffset:	    LREAL   := 0.0;
	lrUserPar1:         LREAL;
	lrUserPar2:         LREAL;
	lrUserPar3:         LREAL;
	lrUserPar4:         LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>